# fiti-agent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fiti/: __init__.py  agent.py  api_client.py  cli.py  colors.py  compiler.py  config.py  linter.py  query.py  state.py  vault.py
tests/: test_agent.py  test_api_client.py  test_cli_commands.py  test_cli_validation.py  test_config.py  test_integration.py  test_state.py  test_vault.py
tests/fixtures/: anthropic_compile_response.json  anthropic_query_response.json  gemini_compile_response.json
